--- a/Website Project/drinks.html
+++ b/Website Project/drinks.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Coffee Drinks</title>
+  <head>
+  <meta charset="utf-8">
+  <title>Coffee Drinks</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
