--- a/Website Project/survey.html
+++ b/Website Project/survey.html
@@ -1,37 +1,38 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Coffee Survey</title>
-
+  <head>
+    <meta charset="utf-8">
+    <title>Coffee Survey</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+  <body>
 
-Coffee Survey
+  Coffee Survey
 
-Your Name
+  Your Name
 
-Email Address
+  Email Address
 
-Tell us your coffee preparation methods.
+  Tell us your coffee preparation methods.
 
-Do you grind your own beans?
-yes
-no
+  Do you grind your own beans?
+  yes
+  no
 
-How do you drink your coffee?
-with sugar
-with cream
+  How do you drink your coffee?
+  with sugar
+  with cream
 
-What is your favorite coffee drink?
+  What is your favorite coffee drink?
 
-please select a drink
-drip coffee
-french press
-espresso
-latte
-flavored
+  please select a drink
+  drip coffee
+  french press
+  espresso
+  latte
+  flavored
 
-</body>
+  </body>
 </html>
