--- a/Section 4 Links/links-sample.html
+++ b/Section 4 Links/links-sample.html
@@ -1,30 +1,64 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Links</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Links</title>
 
-<body>
+    <style>
+      a:link {
+        color: red;
+        text-decoration: none;
+      }
+      a:visited {
+        color:green;
+      }
+      a:hover {
+        color: blue;
+      }
+      nav ul {
+        list-style: none;
+      }
+      nav li {
+        display:inline;
+      }
+      nav a:link, nav a:visited {
+        background-color: red;
+        color: white;
+      }
+      nav a:hover {
+        background-color: blue;
+      }
+    </style>
 
-<h1>Links</h1>
+  </head>
 
-<h2>Internal link</h2>
-linked page
+  <body>
 
-<h2>External link</h2>
-http://www.wikipedia.org/
+    <h1>Links</h1>
 
-<br/><br/>
-<img src="golden-gate-sm.jpg" alt="the golden gate bridge" width="500" height="213" />
+    <h2>Internal link</h2>
+    <a href="other-pages/linked-page1.html">linked page</a>
 
-<h1>Navigation Links</h1>
-<ul>
-<li>Link 1</li>
-<li>Link 2</li>
-<li>Link 3</li>
-</ul>
+    <h2>External link</h2>
+    <a href="http://www.wikipedia.org/" target="_blank" >wikipedia</a>
 
+    <br/><br/>
+    <a href="other-pages/linked-page2.html">
+      <img src="golden-gate-sm.jpg" alt="the golden gate bridge" width="500" height="213" />
+    </a>
 
-</body>
+    <br>
+    <a href="mailto:someone@somedomain.com?Subject=Contact">Contact Us</a>
+
+    <h1>Navigation Links</h1>
+    <nav>
+      <ul>
+          <li><a href="other-pages/linked-page1.html">Link 1</a> </li>
+          <li><a href="other-pages/linked-page2.html">Link 2</a></li>
+          <li><a href="other-pages/linked-page3.html">Link 3</a></li>
+      </ul>
+    </nav>
+
+  </body>
+
 </html>
