--- a/Website Project/brewing.html
+++ b/Website Project/brewing.html
@@ -25,14 +25,14 @@
       <p>
         There are many popular ways to brew coffee:
         <ul>
-          <li>Boiling</li>
-          <li>Steeping</li>
-          <li>Filtration Methods</li>
-          <li>Pressure</li>
+          <li><a href="#boiling">Boiling</a></li>
+          <li><a href="#steeping">Steeping</a></li>
+          <li><a href="#filtration">Filtration Methods</a></li>
+          <li><a href="#presure">Pressure</a></li>
         </ul>
       </p>
       <section>
-        <h3>Boiling</h3>
+        <h3 id="boiling">Boiling</h3>
         <p>
             Boiling, or decoction, was the main method used for brewing coffee until the 1930s and is still used in some Nordic and Middle Eastern countries. The aromatic oils in coffee are released at 96 °C (205 °F), which is just below boiling, while the bitter acids are released when the water has reached boiling point.
         </p>
@@ -52,7 +52,7 @@
       </section>
       
       <section>
-        <h3>Steeping</h3>
+        <h3 id="steeping">Steeping</h3>
         <p>
           A cafetière, or French press, is a tall, narrow cylinder with a plunger that includes a metal or nylon fine mesh filter. The grounds are placed in the cylinder, and off-the- boil water is then poured into it. The coffee and hot water are left in the cylinder for a few minutes (typically 4–7 minutes) and then the plunger is gently pushed down, leaving the filter immediately above the grounds, allowing the coffee to be poured out while the filter retains the grounds. Depending on the type of filter, it is important to pay attention to the grind of the coffee beans, though a rather coarse grind is almost always called for.
           Malaysian and some Caribbean and South American styles of coffee are often brewed using a "sock," which is actually a simple muslin bag, shaped like a filter, into which coffee is loaded, then steeped in hot water. This method is especially suitable for use with local-brew coffees in Malaysia, primarily of the varieties Robusta and Liberica which are often strong-flavored, allowing the ground coffee in the sock to be reused.
@@ -60,7 +60,7 @@
       </section>
 
       <section>
-        <h3>Filtration methods</h3>
+        <h3 id="filtration">Filtration methods</h3>
         <p>
           Drip brew coffee, also known as filtered or American coffee, is made by letting hot water drip onto coffee grounds held in a coffee filter surrounded by a filter holder or brew basket. Drip brew makers can be simple filter holder types manually filled with hot water, or they can use automated systems as found in the popular electric drip coffee-maker. Strength varies according to the ratio of water to coffee and the fineness of the grind, but is typically weaker than espresso, though the final product contains more caffeine. By convention, regular coffee brewed by this method is served by some restaurants in a brown or black pot (or a pot with a brown or black handle), while decaffeinated coffee is served in an orange pot (or a pot with an orange handle).
         </p>
@@ -77,7 +77,7 @@
       </section>
 
       <section>
-        <h3>Pressure</h3>
+        <h3 id="presure">Pressure</h3>
         <p>
           Espresso is made by forcing hot water at 91–95 °C (195–204 °F) under a pressure of between eight and eighteen bars (800–1800 kPa, 116–261 psi), through a lightly packed matrix, called a "puck," of finely ground coffee. The 30–60 cc (1–2 oz.) beverage is served in demitasse cups; sugar is often added. It is consumed during the day at cafes and from street vendors, or after an evening meal. It is the basis for many coffee drinks. It is one of the most concentrated forms of coffee regularly consumed, with a distinctive flavor provided by crema, a layer of flavorful emulsified oils in the form of a colloidal foam floating on the surface, which is produced by the high pressure. Espresso is more viscous than other forms of brewed coffee.
         </p>
