--- a/Website Project/grinding.html
+++ b/Website Project/grinding.html
@@ -9,8 +9,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <h1>All About Coffee</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a> </li>
+          <li><a href="roasting.html">Roasting</a> </li>
+          <li><a href="grinding.html">Grinding</a> </li>
+          <li><a href="brewing.html">Brewing</a> </li>
+          <li><a href="drinks.html">Driks</a> </li>
+          <li><a href="survey.html">Coffee Survey</a></li>
+        </ul>
+      </nav>
+    </header>
     <h1>Coffee Grinding</h1>
-    <figure>
+    <figure class="photo-right">
       <img src="images/coffee-grinder.jpg" width="444px" height="516px">
       <figcaption>An old fashioned coffee grinder</figcaption>
     </figure>
@@ -35,6 +48,20 @@
         <li>Roller grinding</li>
       </ul>
     </p>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a> </li>
+          <li><a href="roasting.html">Roasting</a> </li>
+          <li><a href="grinding.html">Grinding</a> </li>
+          <li><a href="brewing.html">Brewing</a> </li>
+          <li><a href="drinks.html">Driks</a> </li>
+          <li><a href="survey.html">Coffee Survey</a></li>
+        </ul>
+      </nav>
+    </footer>
+
   </body>
 </html>
 
