--- a/Website Project/roasting.html
+++ b/Website Project/roasting.html
@@ -9,7 +9,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <header>
+      <h1>All About Coffee</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a> </li>
+          <li><a href="roasting.html">Roasting</a> </li>
+          <li><a href="grinding.html">Grinding</a> </li>
+          <li><a href="brewing.html">Brewing</a> </li>
+          <li><a href="drinks.html">Driks</a> </li>
+          <li><a href="survey.html">Coffee Survey</a></li>
+        </ul>
+      </nav>
+    </header>
     <h1>Coffee Roasting</h1>
     
     <aside>
@@ -28,7 +40,7 @@
     </aside>
 
     <section>
-      <figure>
+      <figure class="photo-right">
         <img src="images/commercial-roaster.jpg" width="300" height="400">
         <figcaption>commercial coffee roaster</figcaption>
       </figure>
@@ -42,7 +54,18 @@
         The vast majority of coffee is roasted commercially on a large scale, but small-scale commercial roasting has grown significantly with the trend toward "single-origin" coffees served at specialty shops. Some coffee drinkers even roast coffee at home as a hobby in order to both experiment with the flavor profile of the beans and ensure themselves of the freshest possible roast.    
       </p>
     </section>
-
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a> </li>
+          <li><a href="roasting.html">Roasting</a> </li>
+          <li><a href="grinding.html">Grinding</a> </li>
+          <li><a href="brewing.html">Brewing</a> </li>
+          <li><a href="drinks.html">Driks</a> </li>
+          <li><a href="survey.html">Coffee Survey</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
 
