--- a/Website Project/survey.html
+++ b/Website Project/survey.html
@@ -8,6 +8,19 @@
 </head>
 
   <body>
+    <header>
+      <h1>All About Coffee</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a> </li>
+          <li><a href="roasting.html">Roasting</a> </li>
+          <li><a href="grinding.html">Grinding</a> </li>
+          <li><a href="brewing.html">Brewing</a> </li>
+          <li><a href="drinks.html">Driks</a> </li>
+          <li><a href="survey.html">Coffee Survey</a></li>
+        </ul>
+      </nav>
+    </header>
 
   Coffee Survey
 
@@ -34,5 +47,17 @@
   latte
   flavored
 
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a> </li>
+        <li><a href="roasting.html">Roasting</a> </li>
+        <li><a href="grinding.html">Grinding</a> </li>
+        <li><a href="brewing.html">Brewing</a> </li>
+        <li><a href="drinks.html">Driks</a> </li>
+        <li><a href="survey.html">Coffee Survey</a></li>
+      </ul>
+    </nav>
+  </footer>
   </body>
 </html>
