--- a/Section 6 Tables/tables-sample.html
+++ b/Section 6 Tables/tables-sample.html
@@ -1,34 +1,74 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Tables</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Tables</title>
+    <style>
+      table {
+        width: 500px;
+        height: 500px;
+        border-spacing: 0;
+      }
+      table, td, th {
+        border: 1px solid red;
+      }
+      th {
+        height: 80px;
+      }
+      td {
+        text-align: right;
+        vertical-align: bottom;
+        padding: 30px;
+      }
+      .small-column {
+        width: 50px;
+      }
+      thead {
+        background-color: lightblue;
+      }
+      tfoot {
+        background-color: lightgreen;
+      }
 
-<body>
+    </style>
+  </head>
 
-<h1>Tables</h1>
+  <body>
+
+  <h1>Tables</h1>
+  
+  <table>
+    <caption>Table Title</caption>
+    <thead>
+      <tr>
+        <th>column 1</th>
+        <th class="small-column">column 2</th>
+        <th>column 3</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td rowspan="2">data 1-1</td>
+        <td>data 2-1</td>
+        <td>data 3-1</td>
+      </tr>
+
+      <tr>
+        <td>data 2-2</td>
+        <td>data 3-2</td>
+      </tr>
+    </tbody>    
+
+    <tfoot>
+      <tr>
+        <td colspan="2">total 1</td>      
+        <td>total 3</td>
+      </tr>  
+    </tfoot>    
+
+  </table>
 
 
-column 1
-column 2
-column 3
-
-
-data 1-1
-data 2-1
-data 3-1
-
-
-data 1-2
-data 2-2
-data 3-2
-
-
-total 1
-total 2
-total 3
-
-
-</body>
+  </body>
 </html>
