--- a/Section 8 Video/video-sample.html
+++ b/Section 8 Video/video-sample.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Video</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Video</title>
+  </head>
 
-<body>
-<h1>Streaming Video</h1>
+  <body>
+    <h1>Streaming Video</h1>
 
+    <!-- <video src="latte-pour.mp4" width="640" height="360" controls poster="latte-poster.JPG"> -->
+    <video width="640" height="360" controls poster="latte-poster.JPG">
+      <source src="latte-pour.mp4" type="video/mp4">
+      <source src="latte-pour.webm" type="video/webm">
+      <source src="latte-pour.ogv" type="video/ogg">
+      Your browser does not support video playback
+    </video>
+  </body>
 
-</body>
 </html>
